# agibotnav

./: .gitignore  guide.txt  run.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dwb_msgs/share/dwb_msgs/: package.sh
install/fast_lio/lib/fast_lio/: fastlio_mapping
install/fast_lio/share/fast_lio/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/fast_lio/share/fast_lio/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  fast_lioConfig-version.cmake  fast_lioConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/fastlio2_nav/share/fastlio2_nav/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_common/share/nav2_common/: local_setup.sh  package.sh
install/nav2_msgs/share/nav2_msgs/: package.sh
install/nav2_simple_commander/share/nav2_simple_commander/: package.sh
install/nav2_voxel_grid/share/nav2_voxel_grid/: local_setup.sh  package.sh
install/nav_2d_msgs/share/nav_2d_msgs/: package.sh
log/: latest_build
scripts/: 01_save_map.py  02_annotate.py  03_train.py  04_inference.py  05_bbox_3d.py  mappub.py  pcd.py
src/fastlio2_nav/: package.xml  setup.py
src/fastlio2_nav/config/: empty_map.yaml  nav2_params (another copy).yaml  nav2_params.yaml
src/fastlio2_nav/launch/: costmap_only_launch.py
(+62 files in other folders)
