<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fastlio2_nav</name>
  <version>0.0.0</version>
  <description>Nav2 configuration for fastlio2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>rviz2</depend>

  <exec_depend>navigation2</exec_depend>
  <exec_depend>octomap-server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

